<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cooking Man</string>
    <string name="title_activity_maps">Map</string>
    <string name="content">Best place for food lovers like you</string>
    <string name="tvGetStarted">GET STARTED</string>
    <string name="tvSignIn">SIGN IN</string>
    <string name="tvCreate">Create a new account or sign in</string>
    <string name="tvAllrecipe">All the lastest Recipe</string>
    <string name="tvNameRecipe">Thịt xốp cà chua</string>
    <string name="icon_chat">&#xf075;</string>
    <string name="icon_mobile">&#xf3cd;</string>
    <string name="icon_eye">&#xf06e;</string>
    <string name="banana">Banana Ice scream</string>
    <string name="tvFindall">Find all the recent and trending food recipe below </string>
    <string name="next">NEXT</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string-array name="titles">
        <item>Phone</item>
        <item>Verify</item>
        <item>Preferance</item>
    </string-array>
    <string name="fa_icon_comment">&#xf086;</string>
    <string name="welcom">Welcome to Cooking Man</string>
    <string name="signup">Sign up to Cooking Man</string>
    <string name="sendEmail">We have send you an email</string>
    <string name="sendEmailwithlink">We have send you an email with a link to change your account password</string>
    <string name="avalible">Availible Ingredients</string>
    <string name="master">Master chefs recipes</string>
    <string name="email">Email or phone number</string>
    <string name="pass">Password</string>
    <string name="login">login</string>
    <string name="changepass">Change password</string>
    <string name="backto">Back to login page</string>
    <string name="resend_email">Resend email</string>
    <string name="donthaveacoount">Dont have account ?</string>
    <string name="signin">Sign up</string>
    <string name="forget_pass">Forgot password ?</string>
    <string name="profeshional">Professional decorating tips</string>
    <string name="introduc">Introducing cooking man, with more than 6000 thousands recipes amd amazing features cooking man is the best choice to make any cook great.</string>
    <string name="introduce_login">Features cooking man is the best choice to make any cook great</string>
    <string name="validate_phone_empty">Missing number of phone</string>
    <string name="validate_phone_wrong_number">This number is not phone number</string>
    <string name="validate_phone_missing_number">This number is missing</string>
    <string name="validate_email">please insert email is abc@abc.abc</string>
    <string name="phone_number">Phone Number</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_micro">&#xf130;</string>
    <string name="icon_clock">&#xf017;</string>
    <string name="icon_fire">&#xf06d;</string>
    <string name="icon_earth">&#xf0ac;</string>
    <string name="icon_menu">&#xf0c9;</string>
    <string name="icon_message">&#xf0e0;</string>
    <string name="icon_book">&#xf02d;</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="icon_image">&#xf302;</string>
    <string name="icon_arrowleft">&#xf053;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_send_message">&#xf1d8;</string>
    <string name="icon_send_message_solid">&#xf1d9;</string>
    <string name="icon_mesage">&#xf27a;</string>
    <string name="icon_hate">&#xf057;</string>
    <string name="icon_like">&#xf058;</string>
    <string name="icon_cmt">&#xf27a;</string>
    <string name="icon_arrow_left">&#xf053;</string>
    <string name="icon_arrow_right">&#xf054;</string>
    <string name="icon_account">&#xf2bb;</string>
    <string name="icon_recipe">&#xf02d;</string>
    <string name="icon_news">&#xf1ea;</string>
    <string name="icon_language">&#xf1ab;</string>
    <string name="icon_setting">&#xf013;</string>
    <string name="icon_favorite">&#xf004;</string>
    <string name="icon_profile">&#xf007;</string>
    <string name="icon_chathome">&#xf086;</string>
    <string name="icon_info">&#xf05a;</string>
    <string name="icon_share">&#xf1e0;</string>
    <string name="icon_mess">&#xf7cd;</string>
    <string name="icon_friend">&#xf007;</string>
    <string name="icon_menupost">&#xf142;</string>
    <string name="icon_deletepost">&#xf273;</string>
    <string name="icon_report">&#xf024;</string>
    <string name="icon_add">&#xf055;</string>
    <string name="icon_hand">&#xf0a4;</string>
    <string name="icon_facebook">&#xf39e;</string>
    <string name="icon_bookmark">&#xf02e;</string>
    <string name="add_your_cmt">Add your comment</string>
    <string name="say_hi"> Good afternoon Sơn tít</string>
    <string name="lesttart">Let start with some healthy fresh cooking</string>
    <string name="home">HOME</string>
    <string name="recipe">RECIPE</string>
    <string name="chat">CHATTING</string>
    <string name="profile">PROFILE</string>
    <string name="menu_search">search</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_more_v">&#xf142;</string>
    <string name="icon_address">&#xf3c5;</string>
    <string name="icon_follow">&#xf2c2;</string>
    <string name="icon_increase">&#xf067;</string>
    <string name="icon_uninscrea">&#xf068;</string>
    <string name="general_settings">GENERAL SETTINGS</string>
    <string name="chat_preferance">Chat Preferance</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="icon_star_rating">&#xf005;</string>
    <string name="icon_star_rating_half">&#xf5c0;</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_to_shopping_list">Add To Shopping List</string>
    <string name="add_more_ingredient">Add more ingredient</string>
    <string name="how_to_cook">How to cook?</string>
    <string name="start_cooking_now">START COOKING NOW</string>
    <string name="reviews">Reviews</string>
</resources>
