<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >
    <data>
        <variable
                name="viewModel"
                type="com.duongtung.cookingman.ui.login.SendEmailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.ForgotPasswordActivity">
        <include
                android:id="@+id/abSendEmail"
                layout="@layout/actionbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >
        </include>
        <com.duongtung.cookingman.customview.TextViewWithFontAwesome
                android:id="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/abSendEmail"
                android:text="@string/sendEmail"
                android:textStyle="bold"
                android:gravity="center"
                app:iconTop="@string/icon_send_message"
                app:fontFaceText="font-roboto-medium"
                app:iconColor="@color/lighter_gray"
                app:iconTextSize="60dp"
                android:drawablePadding="@dimen/actionbar_padding"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textview_main__tittle_size"
                android:layout_marginTop="@dimen/itemcomment_margintop"
                app:layout_constraintLeft_toLeftOf="parent"
                android:maxWidth="@dimen/frag_getstart_maxwidth"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.duongtung.cookingman.customview.TextViewWithFontAwesome>
        <com.duongtung.cookingman.customview.CustomTextView
                android:id="@+id/tv_describe"
                android:text="@string/sendEmailwithlink"
                android:textSize="@dimen/textview_main_size"
                android:maxWidth="@dimen/frag_getstart_maxwidth"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
                android:layout_marginTop="@dimen/frag_getstart_margin_top"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        <com.duongtung.cookingman.customview.ButtonFont
                android:id="@+id/btn_backlogin"
                android:layout_marginTop="@dimen/splash_tv_margin_30"
                android:background="@drawable/bg_follow"
                android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
                android:text="@string/backto"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </com.duongtung.cookingman.customview.ButtonFont>
        <com.duongtung.cookingman.customview.CustomTextView
                android:id="@+id/tv_resendEmail"
                android:text="@string/resend_email"
                android:gravity="center"
                android:layout_marginTop="@dimen/itemPost_marginTop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="@dimen/textview_main__content_size"
                app:layout_constraintTop_toBottomOf="@id/btn_backlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </com.duongtung.cookingman.customview.CustomTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>