<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.duongtung.cookingman.ui.login.LoginViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
                android:id="@+id/ivlogo"
                android:src="@drawable/logocookingman"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heigh_logo_login">
        </ImageView>
    <com.duongtung.cookingman.customview.TextViewWithFontAwesome
            android:id="@+id/tv_title"
            android:text="@string/welcom"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ivlogo"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            android:textColor="@color/color_tittleGetStart"
            android:textSize="@dimen/textview_main__tittle_size"
            android:layout_marginTop="@dimen/frag_getstart_margin_top"
            app:layout_constraintLeft_toLeftOf="parent"
            android:maxWidth="@dimen/frag_getstart_maxwidth"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
    </com.duongtung.cookingman.customview.TextViewWithFontAwesome>
    <com.duongtung.cookingman.customview.TextViewWithFontAwesome
            android:id="@+id/tv_describe"
            android:text="@string/introduc"
            android:textSize="@dimen/textview_main_size"
            android:maxWidth="@dimen/frag_getstart_maxwidth"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            android:layout_marginTop="@dimen/frag_getstart_margin_top"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
    </com.duongtung.cookingman.customview.TextViewWithFontAwesome>
    <TextView
            android:id="@+id/tv_email"
            android:textColor="@color/color_tittleGetStart"
            app:layout_constraintTop_toBottomOf="@id/tv_describe"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/splash_tv_margin_30"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            android:textSize="@dimen/textview_main__content_size"
            android:text="Email or phone number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    <EditText
            android:id="@+id/et_gmail"
            android:inputType="text"
            android:paddingHorizontal="@dimen/margin_10dp"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    <TextView
            android:id="@+id/tv_password"
            android:textColor="@color/color_tittleGetStart"
            app:layout_constraintTop_toBottomOf="@id/et_gmail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/splash_tv_margin_30"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            android:textSize="@dimen/textview_main__content_size"
            android:text="Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>
    <EditText
            android:id="@+id/et_pass"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/margin_10dp"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </EditText>
    <TextView
            android:id="@+id/tv_forgetpass"
            android:text="@string/forget_pass"
            android:gravity="end"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            app:layout_constraintTop_toBottomOf="@id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </TextView>
    <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/itemPost_marginTop"
            android:background="@drawable/bg_follow"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/tv_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </Button>
    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/splash_tv_margin_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                    android:text="@string/donthaveacoount"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/textview_main__content_size"
                    android:layout_height="wrap_content">
            </TextView>
        <TextView
                android:text="@string/signin"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="@dimen/itemRecipe_marginLeft"
                android:layout_width="wrap_content"
                android:textSize="@dimen/textview_main__content_size"
                android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>