<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
                name="viewModel"
                type="com.duongtung.cookingman.ui.splash.SplashViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splashscreen"
            android:fitsSystemWindows="true">

        <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="297dp"
                android:layout_height="43dp"
                android:layout_marginTop="68dp"
                android:src="@drawable/logochu"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/splash_tv_margin_30"
                android:maxWidth="300dp"
                android:text="@string/content"
                android:textSize="@dimen/tv_18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                tools:ignore="MissingConstraints" />

        <TextView
                android:id="@+id/tvCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/splash_tv_margin_30"
                android:text="@string/tvCreate"
                android:textSize="@dimen/tv_18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCookingMan" />

        <ImageView
                android:id="@+id/imgCookingMan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logocookingman"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvCreate"
                tools:layout_editor_absoluteX="30dp">

            <TextView
                    android:id="@+id/tvGetStarted"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/tvgetcreate"
                    android:gravity="center"
                    android:padding="@dimen/splash_padding"
                    android:text="@string/tvGetStarted"
                    android:textColor="@color/colorwhite"
                    android:textSize="@dimen/splash_btn_text_size" />

            <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/tvsignin"
                    android:gravity="center"
                    android:padding="@dimen/splash_padding"
                    android:text="@string/tvSignIn"
                    android:textColor="#ec1c39"
                    android:textSize="@dimen/splash_btn_text_size" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>